# elpriser

./: .gitignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
src/: app.py
src/static/: form.html  meter.html
