[project]
name = "elpriser"
version = "1.0.0"
description = "Dutch electricity spot price tracker"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn>=0.30.0",
    "pandas>=2.2.0",
    "fastapi>=0.115.0",
    "requests>=2.32.0",
    "jinja2>=3.1.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
